<resources>
    <string name="app_name">VMS</string>
    <string name="title_activity_results">Results</string>

    <!-- MRTD -->
    <string name="PPPrimaryId">Surname</string>
    <string name="PPSecondaryId">Other names</string>
    <string name="PPIssuer">Issuer</string>
    <string name="PPDateOfBirth">Date of birth</string>
    <string name="PPDocumentNumber">Passport number</string>
    <string name="PPNationality">Nationality</string>
    <string name="PPSex">Sex</string>
    <string name="PPCitizenship">Citizenship</string>
    <string name="PPDocumentCode">Document code</string>
    <string name="PPDateOfExpiry">Date of expiry</string>
    <string name="PPOpt1">OPT1</string>
    <string name="PPOpt2">OPT2</string>
    <string name="PPMRZText">MRZ text</string>
    <string name="PPMRZVerified">MRZ verified</string>
    <string name="Label">label</string>
    <string name="Value">value</string>
    <string name="title_activity_other">other</string>

    <string name="VMS">Visitor Management System</string>
    <string name="IDName">Name</string>
    <string name="IDNo">ID Number</string>
    <string name="IDSerial">Serial Number</string>
    <string name="IDSex">Sex</string>
    <string name="IDIssue">Date of Issue</string>
    <string name="IDDob">Date Of Birth</string>
    <string name="whereto">Destination</string>
    <string name="save_details">Save Visitor Details</string>
    <string name="welcome">Welcome to Stallar Visitor Management System</string>
    <string name="choose_document">Please choose the identification document to be scanned.</string>
    <string name="text_id">Kenya National ID</string>
    <string name="text_passport">Passport</string>
    <string name="title_activity_test">Test</string>
    <string name="add_visit">Add new Visit</string>
    <string name="purpose">Purpose</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="add_new_visit">Add a new visit</string>
    <string name="visitor_name">Visitor name</string>
    <string name="time_in">Time in</string>
    <string name="time_out">Time out</string>
    <string name="no_doc">No Identification Document</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="add_visitor">Add visitor</string>
    <string name="scan">Scan ID</string>
    <string name="view">View visitors</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
</resources>
