<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="4dp">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_visitor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visitor_name" />

            <TextView
                android:id="@+id/tv_purpose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purpose" />

            <TextView
                android:id="@+id/tv_time_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_in" />

            <TextView
                android:id="@+id/tv_time_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_out" />
        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>